# infra-specs

./: .coveragerc  .gitreview  CONTRIBUTING.rst  README.md  README.rst  requirements.txt  setup.cfg  template.rst
doc/source/: conf.py  index.rst
specs/: add-elections.openstack.org.rst  ansible_puppet_apply.rst  apps-site.rst  artifact-signing.rst  branch-automation.rst  centralize-release-tagging.rst  code-search.rst  complete-reviewable-release-automation.rst  config-repo-split.rst  deploy-ci-dashboard.rst  deploy-stackviz.rst  dib-nodepool.rst  doc-publishing.rst  ethercalc.rst  firehose.rst  gerrit-2.11.rst  gerrit-2.13.rst  gerrit-contactstore-removal.rst  infra-cloud.rst  irc.rst  jenkins-job-builder_2.0.0-api-changes.rst  letsencrypt.rst  logs-in-swift.rst  maniphest.rst  migrate_askbot.rst  migrate_to_zanata.rst  neutral-governance-website.rst  newton-on-xenial.rst  nodepool-drivers.rst  nodepool-launch-workers.rst  nodepool-workers.rst  nodepool-zookeeper-workers.rst  opendev-gerrit.rst  openstackci.rst  pholio.rst  project-hosting.rst  ptgbot.rst  public_hiera.rst  publish-election-repo.rst  puppet-module-functional-testing.rst  (+26 more)
specs/implemented/: config-repo-split.rst
